--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,9 @@ add_executable(Picohmimetro main.c libs/ssd1306.c)
 pico_set_program_name(Picohmimetro "Picohmimetro")
 pico_set_program_version(Picohmimetro "0.1")
 
+# Adicionando o arquivo PIO
+pico_generate_pio_header(Picohmimetro ${CMAKE_CURRENT_LIST_DIR}/ws2812.pio OUTPUT_DIR ${CMAKE_CURRENT_LIST_DIR}/generated)
+
 # Modify the below lines to enable/disable output over UART/USB
 pico_enable_stdio_uart(Picohmimetro 1)
 pico_enable_stdio_usb(Picohmimetro 1)
@@ -48,7 +51,9 @@ pico_enable_stdio_usb(Picohmimetro 1)
 target_link_libraries(Picohmimetro
         pico_stdlib
         hardware_adc
-        hardware_i2c)
+        hardware_i2c
+        hardware_pio
+        hardware_clocks)
 
 # Add the standard include files to the build
 target_include_directories(Picohmimetro PRIVATE
